# stpsf

./: .pep8speaks.yml  CITATION.cff  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  tox.ini
.github/workflows/: cache.yml  ci_workflows.yml  download_data.yml  retrieve_cache.yml
dev_utils/: Fit Time-Variant Thermal OPDs From Model.ipynb  Get Throughputs from Pandeia.ipynb  Plot SI MIMF Field Point Locations Wall Chart.ipynb  Plot SI WFE Field Dependence.ipynb  WFE_extrapolation.ipynb  compute_psf_library.py  grab_opd_info.py  make-data-sdist.sh  make-minimal-datafiles.py  make-sdist.sh  master_data_release.sh  package_filters.py  wfe_benchmark.py
dev_utils/field_dependence/: basis.py  read_codev_dat_fits.py
docs/: Makefile  README figure.ipynb  api_reference.rst  available_opds.rst  conf.py  fft_optimization.rst  help.rst  index.rst  installation.rst  intro.rst  jwst.rst  jwst_detector_effects.ipynb  jwst_ifu_datacubes.ipynb  jwst_large_psf.ipynb  jwst_matching_psfs_to_data.ipynb  jwst_optical_budgets.ipynb  jwst_psf_subtraction.ipynb  jwst_wavefront_deltas.ipynb  less_common_usage.rst  more_examples.rst  poppy.rst  psf_grids.ipynb  psf_grids.rst  references.rst  release.rst  relnotes.rst  requirements.txt  roman.rst  usage.ipynb  usage.rst
docs/_themes/theme_stpsf/: theme.conf
docs/_themes/theme_stpsf/static/: bootstrap-webbpsf.css
docs/exts/: numfig.py
docs/field_dependence/: multifield_documentation.ipynb
docs/roman_figures/: how_tos.py
notebooks/: Distortion_examples.ipynb  Example Construction of OPDs from Delta Time After Slew.ipynb  Gridded_PSF_Library.ipynb  Simulated OTE Mirror Move Demo.ipynb  Simulating PSF variation within JWST instruments.ipynb  WebbPSF-Roman_Tutorial.ipynb  WebbPSF_tutorial.ipynb  more_examples.ipynb  roman_coronagraph_demo.ipynb
scripts/: stpsfgui
stpsf/: __init__.py  conftest.py  constants.py  detectors.py  distortion.py  gridded_library.py  mast_wss.py  match_data.py  opds.py  optical_budget.py  optics.py  roman.py  stpsf_core.py  surs.py  trending.py  utils.py  webbpsf_core.py
stpsf/tests/: README.txt  __init__.py  test_detectors.py  test_distortion.py  test_errorhandling.py  test_fgs.py  test_jitter.py  test_mast_wss.py  test_miri.py  test_nircam.py  test_niriss.py  test_nirspec.py  test_opds.py  test_optical_budget.py  test_psfgrid.py  test_roman.py  test_trending.py  test_utils.py  test_webbpsf.py
webbpsf/: __init__.py  conftest.py  constants.py  detectors.py  distortion.py  gridded_library.py  jupyter_gui.py  mast_wss.py  match_data.py  opds.py  optical_budget.py  optics.py  roman.py  surs.py  trending.py  utils.py  webbpsf_core.py
webbpsf/tests/: __init__.py  test_detectors.py  test_errorhandling.py  test_fgs.py  test_jitter.py  test_mast_wss.py  test_miri.py  test_nircam.py  test_niriss.py  test_nirspec.py  test_opds.py  test_optical_budget.py  test_psfgrid.py  test_roman.py  test_trending.py  test_utils.py  test_webbpsf.py  validate_webbpsf.py
