[build-system]
requires = [
    "setuptools >= 61.2",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "stpsf"
description = "Creates simulated point spread functions for the James Webb Space Telescope"
authors = [
    { name = "Association of Universities for Research in Astronomy", email = "help@stsci.edu" },
]
dynamic = [
    "version",
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.5.0",
    "matplotlib>=3.2.0",
    "astropy>=5.1.0",
    "photutils>=1.10.0",
    "poppy>=1.0.0",
    "pysiaf>=0.23.3",
    "synphot>=1.0.0",
    "astroquery>=0.4.6",
]

[project.license]
file = "LICENSE.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-astropy",
]
docs = [
    "nbsphinx",
    "sphinx",
    "stsci_rtd_theme",
    "sphinx-astropy",
    "sphinx-automodapi",
    "sphinx-issues",
    "tomli; python_version <\"3.11\"",
]

[project.urls]
Homepage = "http://stpsf.readthedocs.io/"
github_project = "https://github.com/spacetelescope/stpsf"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "*.fits, *.csv",
]
"stpsf.tests" = [
    "data/*",
]

[tool.setuptools_scm]
write_to = "stpsf/version.py"

[tool.pytest.ini_options]
minversion = "2.2"
testpaths = [
    "stpsf/tests",
]
norecursedirs = [
    "build",
    "docs/_build",
]
astropy_header = "true"
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "-p no:warnings"

[tool.coverage.run]
source = [
    "stpsf",
]
omit = [
    "stpsf/conftest*",
    "stpsf/cython_version*",
    "stpsf/setup_package*",
    "stpsf/*/setup_package*",
    "stpsf/*/*/setup_package*",
    "stpsf/tests/*",
    "stpsf/*/tests/*",
    "stpsf/*/*/tests/*",
    "stpsf/version*",
    "*/stpsf/conftest*",
    "*/stpsf/cython_version*",
    "*/stpsf/setup_package*",
    "*/stpsf/*/setup_package*",
    "*/stpsf/*/*/setup_package*",
    "*/stpsf/tests/*",
    "*/stpsf/*/tests/*",
    "*/stpsf/*/*/tests/*",
    "*/stpsf/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "stpsf/conftest*",
    "stpsf/cython_version*",
    "stpsf/setup_package*",
    "stpsf/*/setup_package*",
    "stpsf/*/*/setup_package*",
    "stpsf/tests/*",
    "stpsf/*/tests/*",
    "stpsf/*/*/tests/*",
    "stpsf/version*",
    "*/stpsf/conftest*",
    "*/stpsf/cython_version*",
    "*/stpsf/setup_package*",
    "*/stpsf/*/setup_package*",
    "*/stpsf/*/*/setup_package*",
    "*/stpsf/tests/*",
    "*/stpsf/*/tests/*",
    "*/stpsf/*/*/tests/*",
    "*/stpsf/version*",
]
